# unit-testing-calculator

./: .coverage  .gitignore  README.md  pyproject.toml  report.txt  setup-project.md  test_report.html
.github/: workflows
.github/workflows/: main.yaml
src/kalkulator/: calculator.py  calculator_view.py  get_input.py  main.py  validator.py  view.py
tests/: conftest.py  test_calculator.py  test_main.py  test_show_result.py
tests/assets/: style.css
tests/test_module/: test_show_header.py  test_validate_operand.py  test_validate_operator.py  test_validator_helpers.py
tests/test_module/azhar/: test_10_input_operand.py  test_11_input_operator.py  test_12_main.py  test_1_calculator_view.py  test_2_show_header.py  test_3_prompt_operand1.py  test_4_prompt_operator.py  test_5_prompt_operand2.py  test_6_perform_operation.py  test_7_show_result.py  test_8_prompt_exit.py  test_9_show_error.py
