[project]
name = "kalkulator"
version = "0.1.0"
description = ""
authors = [
    {name = "forscy",email = "jayabayatools@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyinstaller (>=6.13.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "kalkulator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
